--- a/example/templates/hello.html
+++ b/example/templates/hello.html
@@ -4,7 +4,7 @@
     <title>My Go Template</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
-    <p>This is a Go template example.</p>
+    <h1>{{.Title }}</h1>
+    <p>{{ .Body }}</p>
 </body>
 </html>
